--- a/first_night.html
+++ b/first_night.html
@@ -296,7 +296,8 @@
         <h1> دلم برات 💛</h1>
         <p>
             دلم می‌خواست الان کنارم بودی، با اون خنده‌ی قشنگت، با اون نگاهی که همه چی رو از یادم می‌بره...
-            دلم می‌خواست فقط نگاهت کنم و بگم "هیچ‌جا خونه‌تر از آغوش تو نیست." 🌻
+            دلم می‌خواست فقط نگاهت کنم و بگم "هیچ‌جا خونه‌تر از آغوش تو نیست." 🌻 <br>
+            دلم میخواست که ببوسمت یه بوسه طولانی جوری که تموم نشه و در حالی که قلب هامون باهم تماس دارن کنارت بخوابم ❤
         </p>
         <button class="nextSectionBtn">بریم بعدی 💛</button>
     </div>
