--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <div class="card text-center p-3 locked" id="card1">
                             <i class="bi bi-lock-fill mb-3"></i>
                             <h5>شب اول</h5>
-                            <a href="page1.html" class="stretched-link d-none"></a>
+                            <a href="first_night.html" class="stretched-link d-none"></a>
                         </div>
                     </div>
 
