--- a/index.html
+++ b/index.html
@@ -178,61 +178,72 @@
 
                 <div class="row g-4 justify-content-center">
                     <!-- کارت‌ها -->
+
                     <div class="col-6">
-                        <div class="card text-center p-3 locked" id="card1">
-                            <i class="bi bi-lock-fill mb-3"></i>
-                            <h5>شب اول</h5>
-                            <a href="page1.html" class="stretched-link d-none"></a>
-                        </div>
+                        <a href="first_night.html" class="text-decoration-none">
+                            <div class="card text-center p-3 locked" id="card1">
+                                <i class="bi bi-lock-fill mb-3"></i>
+                                <h5>شب اول</h5>
+                            </div>
+                        </a>
+                    </div>
+                    
+                    <div class="col-6">
+                        <a href="page2.html" class="text-decoration-none">
+                            <div class="card text-center p-3 locked" id="card2">
+                                <i class="bi bi-lock-fill mb-3"></i>
+                                <h5>شب دوم</h5>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="col-6">
-                        <div class="card text-center p-3 locked" id="card2">
-                            <i class="bi bi-lock-fill mb-3"></i>
-                            <h5>شب دوم</h5>
-                            <a href="page2.html" class="stretched-link d-none"></a>
-                        </div>
+                        <a href="page2.html" class="text-decoration-none">
+                            <div class="card text-center p-3 locked" id="card2">
+                                <i class="bi bi-lock-fill mb-3"></i>
+                                <h5>شب سوم</h5>
+                            </div>
+                        </a>
+                    </div>
+
+
+                    <div class="col-6">
+                        <a href="page2.html" class="text-decoration-none">
+                            <div class="card text-center p-3 locked" id="card2">
+                                <i class="bi bi-lock-fill mb-3"></i>
+                                <h5>شب چهارم</h5>
+                            </div>
+                        </a>
+                    </div>
+
+
+                    <div class="col-6">
+                        <a href="page2.html" class="text-decoration-none">
+                            <div class="card text-center p-3 locked" id="card2">
+                                <i class="bi bi-lock-fill mb-3"></i>
+                                <h5>شب پنجم</h5>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="col-6">
-                        <div class="card text-center p-3 locked" id="card3">
-                            <i class="bi bi-lock-fill mb-3"></i>
-                            <h5>شب سوم</h5>
-                            <a href="page3.html" class="stretched-link d-none"></a>
-                        </div>
+                        <a href="page2.html" class="text-decoration-none">
+                            <div class="card text-center p-3 locked" id="card2">
+                                <i class="bi bi-lock-fill mb-3"></i>
+                                <h5>شب ششم</h5>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="col-6">
-                        <div class="card text-center p-3 locked" id="card4">
-                            <i class="bi bi-lock-fill mb-3"></i>
-                            <h5>شب چهارم</h5>
-                            <a href="page4.html" class="stretched-link d-none"></a>
-                        </div>
+                        <a href="page2.html" class="text-decoration-none">
+                            <div class="card text-center p-3 locked" id="card2">
+                                <i class="bi bi-lock-fill mb-3"></i>
+                                <h5>شب هفتم</h5>
+                            </div>
+                        </a>
                     </div>
 
-                    <div class="col-6">
-                        <div class="card text-center p-3 locked" id="card5">
-                            <i class="bi bi-lock-fill mb-3"></i>
-                            <h5>شب پنجم</h5>
-                            <a href="page5.html" class="stretched-link d-none"></a>
-                        </div>
-                    </div>
-
-                    <div class="col-6">
-                        <div class="card text-center p-3 locked" id="card6">
-                            <i class="bi bi-lock-fill mb-3"></i>
-                            <h5>شب ششم</h5>
-                            <a href="page6.html" class="stretched-link d-none"></a>
-                        </div>
-                    </div>
-
-                    <div class="col-6">
-                        <div class="card text-center p-3 locked" id="card7">
-                            <i class="bi bi-lock-fill mb-3"></i>
-                            <h5>شب هفتم</h5>
-                            <a href="page7.html" class="stretched-link d-none"></a>
-                        </div>
-                    </div>
                 </div>
 
                 <p class="text-center footer-text mt-4">🌻 ساخته شده با عشق برای سایه 🌻</p>
