--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     </div>
 
                     <div class="col-6">
-                        <a href="page2.html" class="text-decoration-none">
+                        <a href="third_night.html" class="text-decoration-none">
                             <div class="card text-center p-3 locked" id="card2">
                                 <i class="bi bi-lock-fill mb-3"></i>
                                 <h5>شب سوم</h5>
