--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
 
                     <div class="col-6">
-                        <a href="page2.html" class="text-decoration-none">
+                        <a href="forth_night.html" class="text-decoration-none">
                             <div class="card text-center p-3 locked" id="card4">
                                 <i class="bi bi-lock-fill mb-3"></i>
                                 <h5>شب چهارم</h5>
