--- a/forth_night.html
+++ b/forth_night.html
@@ -98,7 +98,7 @@
     <!-- 🔹 مقدمه -->
     <div id="intro" class="story-scene active fade-in">
         <img src="assets/images/start.jpg" alt="شروع داستان">
-        <h3 class="mb-3">آغاز داستان</h3>
+        <h3 class="mb-3">قسمت اول: داستان کارخانه نساجی ابریشم (۱)</h3>
         <p>اتاق خواب. نور ملایم صبح از پنجره به داخل تابیده. "سایه" از خواب بیدار می‌شود. همه چیز آرام است، اما یک آرامش
             غیرعادی.
             سایه به سمت دیگر تخت نگاه می‌کند و جای خالی "امیر" را می‌بیند. بالش او سرد است، انگار ساعت‌هاست که رفته.</p>
@@ -212,7 +212,7 @@
 
             او به‌سختی نفس می‌کشد. سیگنال در همان لحظه خاموش می‌شود و موقعیت به «آخرین مکان ثبت‌شده» تغییر می‌کند. <br>
 
-            سایه برای لحظه‌ای خشک می‌زند. هیچ توضیحی منطقی وجود ندارد. امیر چرا باید در آنجا باشد؟ آن‌هم این وقت شب؟
+            سایه برای لحظه‌ای خشک می‌زند. هیچ توضیحی منطقی وجود ندارد. امیر چرا باید در آنجا باشد؟ آن‌هم این وقت روز؟
             چند ثانیه بعد، بدون حتی فکر کردن، کیف و کلید ماشینش را برمی‌دارد.
             تصمیمش گرفته شده است.
         </p>
