--- a/forth_night.html
+++ b/forth_night.html
@@ -324,7 +324,10 @@
             اما صدایی خفیف از طبقه‌ی بالا می‌رسد. سایه با ترس پله‌ها را بالا می‌رود.
             در یکی از اتاق‌ها لپ‌تاپ باز است و تصویر دوربینی در حال پخش است...
         </p>
-        <button class="btn btn-dark choice-btn" data-next="intro">شروع دوباره</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene19">🔍 بررسی لپ‌تاپ</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene30">👣 دنبال کردن رد پا</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene31">🩸 بررسی اتاق</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene16">📞 تماس با پلیس</button>
     </div>
 
     <!-- مسیر ۲: تماس با پلیس -->
@@ -394,6 +397,349 @@
         <button class="btn btn-dark choice-btn" data-next="intro">شروع دوباره</button>
     </div>
 
+    <!-- مسیر لپ تاپ  -->
+    <div id="scene19" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+
+            سایه روی صندلی زنگ‌زده خم می‌شود. لپ‌تاپ قدیمی با صدای فن ضعیفی هنوز روشن است. روی دسکتاپ چند پوشه دیده
+            می‌شود: <br>
+            - CAMERA_FEED <br>
+            - REPORTS_1379 <br>
+            - ARCHIVE_NEWS <br>
+
+            او اول پوشه‌ی CAMERA_FEED را باز می‌کند.
+            ویدیوها یکی‌یکی پخش می‌شوند: <br>
+            - ۶:۴۷ بامداد: امیر وارد ساختمان می‌شود. چند دقیقه بعد برق قطع می‌شود. <br>
+            - ۷:۰۲ بامداد: سایه‌هایی ناشناس در حیاط دیده می‌شوند، اما تصویر ناگهان پر از نویز می‌شود. <br>
+            - ۷:۱۵ بامداد: فقط سکوت . <br><br>
+
+            سایه به پوشه‌ی REPORTS_1379 می‌رود.
+            یک فایل PDF باز می‌شود: <br>
+            > «گزارش حادثه‌ی کارخانه نساجی ابریشم – تابستان ۱۳۷۹: <br>
+            > در پی نشت مواد شیمیایی ناشناخته، چندین کارگر دچار توهمات شدید و رفتارهای غیرعادی شدند. <br>
+            > پروژه‌ی تحقیقاتی متوقف و کارخانه تعطیل گردید. <br>
+            > دستور: بایگانی و عدم انتشار عمومی.» <br>
+
+            سایه زیر لب می‌گوید: «پس اینجا فقط یک کارخانه‌ی نساجی نبوده…» <br>
+
+            در پوشه‌ی ARCHIVE_NEWS یک مقاله‌ی قدیمی اسکن‌شده دیده می‌شود: <br>
+            > «شایعاتی درباره‌ی آزمایش‌های غیرقانونی در کارخانه‌ی ابریشم. <br>
+            > مقامات محلی هرگونه ارتباط با پروژه‌های نظامی یا شیمیایی را تکذیب کردند. <br>
+            > اما شاهدان از انتقال شبانه‌ی محموله‌ها به انبارهای زیرزمینی خبر می‌دهند.» <br>
+
+            همین لحظه، صدای قدم‌ها پشت سرش بلندتر می‌شود. سایه به آرامی لپ‌تاپ را می‌بندد. نور چراغ‌قوه روی دیوار
+            می‌افتد و سایه‌ی
+            انسانی روی دیوار کشیده می‌شود…
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene20">برگشتن و بررسی منبع صدا</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene21">پنهان شدن</button>
+    </div>
+
+
+    <!-- مسیر درگیر شدن -->
+    <div id="scene20" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+
+            سایه نفس عمیقی می‌کشد، چراغ‌قوه را محکم در دست می‌گیرد و به سمت در می‌ایستد.
+            صدای پا نزدیک‌تر می‌شود… در با صدای قیژ باز می‌شود. <br>
+
+            نور چراغ‌قوه‌ی سایه مستقیم روی چهره‌ی تازه‌وارد می‌افتد: <br>
+            یک مرد ناشناس با لباس کار خاکی، ماسک نیمه‌پاره روی صورت، و دستی که روی یک کیف فلزی است.
+
+            مرد جا می‌خورد، دستش را جلوی صورتش می‌گیرد.
+            سایه با صدایی محکم می‌گوید: <br>
+            «تو کی هستی؟ اینجا چی کار می‌کنی؟ امیر کجاست؟» <br>
+
+            مرد لحظه‌ای سکوت می‌کند، بعد با خونسردی می‌گوید:
+            «نباید اینجا باشی… اون پسر رو بردن. کار تو هم تمومه اگه چیزی دیده باشی.» <br>
+
+            او یک قدم جلو می‌آید. تنش بالا می‌رود.
+
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene23">درگیر شدن</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene24">فرار کردن</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene25">برداشتن لپ تاپ و فرار کردن</button>
+    </div>
+
+    <div id="scene23" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه چراغ‌قوه را محکم در دست می‌گیرد و به سمت مرد ناشناس حمله می‌کند.
+            درگیری در اتاق تنگ و تاریک شروع می‌شود؛ صدای برخورد فلز و نفس‌های سنگین فضا را پر می‌کند.
+            مرد ناشناس سعی می‌کند سایه را به دیوار بکوبد، اما در شتاب خودش پایش روی لبه‌ی زنگ‌زده‌ی کف‌پوش گیر می‌کند.
+            او تعادلش را از دست می‌دهد، به عقب پرت می‌شود و از شکاف حفاظ شکسته به پایین سقوط می‌کند.
+            سکوتی سنگین می‌افتد. سایه نفس‌نفس می‌زند و به لبه نگاه می‌کند… مرد بی‌حرکت روی زمین افتاده.
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene26">برداشتن لپ تاپ و چک کردن جسد فرد
+            ناشناس</button>
+    </div>
+
+    <div id="scene26" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه هنوز نفس‌نفس می‌زند. مرد ناشناس پایین افتاده و دیگر حرکتی ندارد. سایه جلو می‌رود و جیب‌هایش را می‌گردد.
+            <br><br>
+
+            - یک کارت شناسایی پیدا می‌کند: خاکستری، با لوگوی «Horizon Logistics». اسم روی کارت: «نیما س.»، کُد: HZ-13.
+            پشت کارت با
+            خودکار قرمز نوشته شده: «Z-3 | شب سوم». <br>
+            - روی کارت یک نوار مخفی هست که می‌تواند قفل‌ها یا دستگاه‌ها را باز کند. <br>
+            - شعار کوچکی هم روی کارت چاپ شده: «انتقال بی‌رد.» سایه زیر لب می‌گوید: «پس کارشون فقط جابه‌جایی نیست،
+            پاک‌سازی هم
+            می‌کنن.» <br><br>
+
+            بعد کیف فلزی مرد را باز می‌کند. داخلش یک دانگل رمزگشا، یک کابل باریک و یک برگه‌ی دستورالعمل است: <br>
+            «دانگل را وصل کن، کارت را تأیید کن، پاک‌سازی را اجرا کن.» <br>
+            سایه می‌فهمد این وسایل برای باز کردن قفل لپ‌تاپ به درد می‌خورند. <br>
+
+            ---
+
+            سایه به اتاق برمی‌گردد. لپ‌تاپ هنوز روی میز است. دانگل را وصل می‌کند، کارت را نزدیک می‌گیرد. صفحه روشن
+            می‌شود و قفل باز
+            می‌شود. <br>
+            بعضی فایل‌ها پاک شده‌اند، اما هنوز همه‌چیز از بین نرفته. <br>
+
+            - یک فایل مهم پیدا می‌کند: «Route_Night3.kml» که مسیر انتقال امشب را نشان می‌دهد: «در شمالی → حیاط → جاده
+            ساحلی → انبار
+            Z-3». <br>
+            - یک گزارش کوتاه: «دو نفر مسئول حمل، نیما مسئول پاک‌سازی، گروگان نیمه‌هوشیار، زمان رسیدن: ۷:۰۰.»
+            - یک یادداشت هم در کشو هست: «اگر دانگل کار نکرد، رمز جایگزین = ash-13». <br>
+
+            سایه فایل‌ها را کپی می‌کند، لپ‌تاپ را برمی‌دارد و از اتاق بیرون می‌رود. <br><br>
+
+            ---
+
+            در خروجی را آرام باز می‌کند. نورافکن انبار گوشه‌ی حیاط روشن است و دودکش‌ها سایه‌های بلند روی زمین
+            انداخته‌اند.
+            سایه کارت را لمس می‌کند، لپ‌تاپ را محکم‌تر می‌گیرد و به سمت ماشینش می‌رود. <br>
+
+
+            سایه لپ‌تاپ را روی صندلی می‌گذارد، کارت را در آفتاب‌گیر پنهان می‌کند و موتور را روشن می‌کند. روی نمایشگر
+            ماشین، نقشه‌ی
+            Night3 باز می‌شود. مسیر اول می‌درخشد: «حیاط → در شمالی → جاده ساحلی → Z-3». <br><br>
+
+            او نفس عمیقی می‌کشد و پدال را فشار می‌دهد. شب تازه شروع شده، و مقصد هنوز پر از راز است.
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene26">ادامه
+        </button>
+    </div>
+
+
+    <div id="scene24" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه تصمیم می‌گیرد جانش مهم‌تر است. لپ‌تاپ را رها می‌کند و از اتاق بیرون می‌دود.
+            صدای فریاد مرد پشت سرش می‌آید: «ایست!»
+            سایه از راهروی تاریک می‌گذرد. در همان راهروی باریک که در حالت اول مرد ناشناس سقوط کرده بود، حالا فقط صدای
+            پای
+            تعقیب‌کننده‌اش شنیده می‌شود. <br><br>
+
+            سایه با تمام توان می‌دود. مرد پشت سرش نزدیک می‌شود، اما ناگهان صدای لغزش فلز و فریاد کوتاهی در فضا می‌پیچد.
+            سایه لحظه‌ای
+            مکث می‌کند، اما برنمی‌گردد. فقط صدای برخوردی سنگین از پایین می‌آید… و بعد سکوت. <br>
+
+            سایه نفسش را حبس می‌کند و به سمت در خروجی می‌دود. <br>
+            هوای سرد شب به صورتش می‌خورد. حالا در حیاط کارخانه است: <br>
+            - ساختمان‌های متروکه اطراف، <br>
+            - برجک زنگ‌زده‌ی نگهبانی، <br>
+            - و نور ضعیف چراغی که از یک انبار نیمه‌ویران می‌تابد.
+
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene26">چک کردن تعقیب کننده
+            ناشناس</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene40">برگشتن به خانه</button>
+    </div>
+
+    <div id="scene25" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه لپ‌تاپ را زیر بغل می‌زند و به سمت در می‌دود.
+            مرد ناشناس فریاد می‌زند و به او حمله می‌کند. در کشمکش، هر دو به سمت راهروی باریک پرت می‌شوند.
+            سایه خودش را کنار می‌کشد، اما مرد با بی‌احتیاطی پایش لیز می‌خورد و از پله‌های فلزی سقوط می‌کند.
+            صدای برخورد بدنش با زمین در سکوت شب می‌پیچد.
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene26"> چک کردن جسد فرد
+            ناشناس</button>
+    </div>
+    <!-- اتمام مسیر درگیر شدن با 2 حالت یکی به پلیس و یکی هم در حرکت به مقصد -->
+
+    <!-- مسیر پنهان شدن -->
+    <div id="scene21" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+
+            سایه پشت قفسه‌ی زنگ‌زده خم می‌شود. صدای قدم‌ها نزدیک‌تر می‌شود و مرد ناشناس وارد اتاق می‌شود. چراغ‌قوه‌اش
+            روی لپ‌تاپ
+            می‌افتد. او سریع شروع می‌کند به تایپ کردن، انگار مأموریتش فقط یک چیز است: پاک کردن همه‌ی ردپاها.
+
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene23">درگیر شدن</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene27">صبر کردن</button>
+    </div>
+
+    <div id="scene27" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه بی‌حرکت می‌ماند. مرد ناشناس در حالی که فایل‌ها را پاک می‌کند، زیر لب غر می‌زند: <br>
+            «اون پسره رو بردن… رئیس گفت هیچ چیزی نباید باقی بمونه. امشب همه‌چی تموم می‌شه.» <br>
+            او بعد از چند دقیقه لپ‌تاپ را می‌بندد، کیف فلزی‌اش را برمی‌دارد و از اتاق خارج می‌شود.
+            سایه صبر می‌کند تا صداها دور شوند، بعد آرام از پشت قفسه بیرون می‌آید. لپ‌تاپ خاموش و خالی است، اما هنوز روی
+            میز جا
+            مانده.
+            او می‌تواند لپ‌تاپ را بردارد یا بی‌خیال شود.
+
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene28">برداشتن لپ‌تاپ</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene29">بیخیال شدن و تعقیب کردن</button>
+    </div>
+
+    <div id="scene28" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            او لپ‌تاپ را برمیدارد و در تعقیب فرذ ناشناس حرکت میکند. <br>
+            مرد سوار ماشین شده و راه میوفتد و پشت او سایه در ماشین در حال تعقیب اوست تا شاید به امیر برسد
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene28">ادامه</button>
+    </div>
+
+    <div id="scene29" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            او لپ‌تاپ را بیخیال میشود و در تعقیب فرد ناشناس حرکت میکند. <br>
+            مرد سوار ماشین شده و راه میوفتد و پشت او سایه در ماشین در حال تعقیب اوست تا شاید به امیر برسد
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene28">ادامه</button>
+    </div>
+
+    <!-- اتمام مسیر پنهان شدن شدن با 2 حالت یکی به تعقیب و یکی هم در حرکت به مقصد -->
+
+
+    <!-- مسیر دنبال کردن رد پاها  -->
+    <div id="scene30" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه رد کفش‌ها را دنبال می‌کند. ردها از راهرو عبور می‌کنند، از کنار لکه‌های خون می‌گذرند و به در خروجی
+            می‌رسند. <br>
+            او آرام در را باز می‌کند و وارد حیاط تاریک کارخانه می‌شود. <br><br>
+
+            در گوشه‌ی حیاط، چراغ‌های یک ون خاکستری روشن است. دو مرد ناشناس در حال بلند کردن چیزی از روی زمین‌اند. سایه
+            چراغ‌قوه‌اش
+            را خاموش می‌کند و از پشت بدنه‌ی زنگ‌زده‌ی یک کامیون قدیمی نگاه می‌کند. <br>
+
+            در همین لحظه، نفر سوم از ساختمان بیرون می‌آید؛ همان کسی که مأموریت دارد لپ‌تاپ و مدارک داخل را پاک کند. او
+            کیف فلزی‌اش
+            را محکم گرفته و به سمت اتاق برمی‌گردد. <br>
+
+            نور چراغ ون روی صورت کسی می‌افتد: امیر. <br>
+            - دست‌هایش بسته است. <br>
+            - سرش پایین افتاده، انگار نیمه‌هوشیار است. <br>
+            - یکی از مردها می‌گوید: «زود باش، رئیس گفته قبل از نیمه‌شب باید برسونیمش.» <br>
+
+            سایه پشت یک کامیون زنگ‌زده پنهان می‌شود. حالا باید تصمیم بگیرد:
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene19">برگشتن سراغ لپ تاپ</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene21">تعقیب کردن ون</button>
+    </div>
+
+
+    <div id="scene31" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+
+            او جلوتر می‌رود و وارد اتاق بایگانی می‌شود. قفسه‌ها نیمه‌سوخته‌اند، اما چند پوشه و عکس هنوز باقی مانده. <br>
+            - در یکی از پوشه‌ها، گزارش‌های محرمانه‌ای پیدا می‌کند: «پروژه Z – انتقال مواد به انبار زیرزمینی». <br>
+            - بین کاغذها یک عکس قدیمی هم هست: کارگران جلوی کارخانه، تاریخ ۱۳۷۸. در گوشه‌ی تصویر همان مرد کت‌پوش (مدیر
+            پروژه) دیده
+            می‌شود.
+
+            سایه هر دو را برمی‌دارد.
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene32">رفتن به راهروی کناری</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene33">رفتن به انبار زیرزمینی</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene34">رفتن به برج نگهابانی</button>
+    </div>
+
+
+    <div id="scene32" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه چراغ‌قوه را روی زمین می‌اندازد. لکه‌های خون خشک‌شده روی سیمان کشیده شده‌اند، انگار کسی را روی زمین
+            کشانده‌اند. <br>
+            - کنار خون، یک تکه پارچه‌ی آبی پیدا می‌کند که به نظر بخشی از لباس کارگری قدیمی است. <br>
+            - روی پارچه یک نشان کوچک فلزی دوخته شده: «Z-3». <br>
+            - کمی جلوتر، رد خون به سمت یک در بسته می‌رود، اما در قفل است.
+        </p>
+
+        <button class="btn btn-outline-dark choice-btn" data-next="scene33">رفتن به انبار زیرزمینی</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene34">رفتن به برج نگهابانی</button>
+    </div>
+
+
+    <div id="scene33" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            با کمک نقشه، سایه دری فلزی در کف سالن پیدا می‌کند. قفل زنگ‌زده‌اش نیمه‌باز است. <br>
+            - داخل انبار تاریک، قفسه‌های فلزی پر از بشکه‌های قدیمی دیده می‌شود. روی بعضی بشکه‌ها علامت خطر شیمیایی محو
+            شده. <br>
+            - روی میز گوشه‌ی انبار، یک دستگاه سنجش قدیمی پیدا می‌کند (مثل دوزیمتر یا آشکارساز مواد). <br>
+            - روی دیوار با اسپری نوشته شده: «پاک‌سازی = نجات».
+
+        </p>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene32">رفتن به راهروی کارخانه</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene34">رفتن به برج نگهابانی</button>
+    </div>
+
+    <div id="scene34" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه از پله‌های زنگ‌زده بالا می‌رود. برجک کوچک و متروکه است، اما هنوز بقایای وسایل نگهبان باقی مانده.
+            - یک دفترچه یادداشت روی میز پیدا می‌کند. داخلش نوشته‌هایی مثل:
+            - «شب‌ها کامیون‌ها بدون چراغ وارد می‌شن.»
+            - «امروز مرد کت‌پوش با چند نفر خارجی اومد.»
+            - «گفتن اگر کسی پرسید، بگیم کارخانه تعطیله.»
+            - کنار دفترچه، یک دوربین شکسته هم هست. فیلم داخلش سوخته، اما شماره‌ی سریال روی بدنه می‌تواند بعداً به منبع
+            اصلی وصل شود.
+            - از بالای برجک، سایه دید خوبی به حیاط و مسیر خروج دارد. می‌بیند که در شمالی بیشتر استفاده شده تا در اصلی.
+        </p>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene35">ادامه</button>
+    </div>
+
+    <div id="scene35" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p>
+            سایه از در خروجی عبور می‌کند.
+            هوای شب سرد است و بوی فلز زنگ‌زده و خاک نم‌خورده در هوا پیچیده. <br>
+            نور ضعیف یک چراغ از انبار نیمه‌ویران گوشه‌ی حیاط می‌تابد. دودکش‌های بلند سایه‌های کشیده‌ای روی زمین
+            ترک‌خورده
+            انداخته‌اند.
+        </p>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene36">ادامه</button>
+    </div>
+
+    <div id="scene36" class="story-scene">
+        <img src="assets/images/laptop_screen.jpg" alt="لپ‌تاپ روشن">
+        <p> 
+            در همین لحظه، صدای درِ فلزی از سمت دیگر حیاط شنیده می‌شود. <br>
+            نفر سوم—مردی با کت تیره و کیف فلزی—از ساختمان خارج می‌شود. <br>
+            او بی‌آنکه اطراف را نگاه کند، به سمت درِ شمالی می‌رود. <br>
+        </p>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene26">تعقیب کردن فرد ناشناس</button>
+        <button class="btn btn-outline-dark choice-btn" data-next="scene40">برگشتن به خانه و بررسی سرنخ ها</button>
+    </div>
 
 
 
